# memfault-b_u585i_iot02a-demo-app

./: CMakeLists.txt  Kconfig  README.md  prj.conf  west.yml
src/: main.c
